[package]
name = "derive-env-url"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
version = "1.0.4"
description = "Derives for env-url"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Bajix/env-url/"

[lib]
doctest = false
proc-macro = true

[dependencies]
darling = "0.13.1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = [] }
url = "2.2.2"
