[package]
name = "derive-env-url"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2018"
version = "2.0.3"
description = "Derives for env-url"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Bajix/env-url/"

[lib]
doctest = false
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = [] }
url = "2.2.2"
