[package]
name = "env-url"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2018"
version = "1.0.4"
description = "env composable service urls"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Bajix/env-url/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-env-url = { version = "1.0.4", path = "../derive-env-url" }
url = "2.2.2"

[dev-dependencies]
ctor = "0.1.22"

